--- a/OpenChaperone/data/config/config.json
+++ b/OpenChaperone/data/config/config.json
@@ -3,6 +3,7 @@
 	//App settings
 	"ENABLE_CONSOLE" : true,
 	"USE_VSYNC" : false,
+	"WEBCAM_DEMO_MODE" : true,
 
 	//Window settings
 	"WINDOW_START_WIDTH" : 1280,
@@ -10,7 +11,7 @@
 	"WINDOW_START_X" : 0, //Starts from the top left corner of the rendering surface, not the whole window
 	"WINDOW_START_Y" : 40, //Starts from the top left corner of the rendering surface, not the whole window
 	"WINDOW_START_FULLSCREEN" : false,
-	"GUI_SCALE" : 1.125, //1.0 is default scale. Note that this will make text a bit fuzzy
+	"GUI_SCALE" : 1.5, //1.0 is default scale. Note that this will make text a bit fuzzy
 
 	//OpenCV settings
 	"USE_OPENCL" : false
