FIGURED OUT THE DISTORTION - EMERGENCY BACKUP

--- a/OpenChaperone/OpenChaperone.vcxproj
+++ b/OpenChaperone/OpenChaperone.vcxproj
@@ -97,7 +97,7 @@
     <CustomBuildBeforeTargets>
     </CustomBuildBeforeTargets>
     <CodeAnalysisRuleSet>C:\Program Files (x86)\Microsoft Visual Studio 14.0\Team Tools\Static Analysis Tools\Rule Sets\NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -203,7 +203,7 @@ C:\Users\Jon\Dev\Projects\of_v0.9.3_vs_release\addons\ofxFontStash-master\libs\f
       <CompileAs>CompileAsCpp</CompileAs>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <EnablePREfast>true</EnablePREfast>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
