--- a/OpenChaperone/data/config/config.json
+++ b/OpenChaperone/data/config/config.json
@@ -2,12 +2,12 @@
 {
 	//App settings
 	"ENABLE_CONSOLE" : true,
-	"USE_VSYNC" : false,
+	"USE_VSYNC" : true,
 	"WEBCAM_DEMO_MODE" : true,
 
 	//Window settings
-	"WINDOW_START_WIDTH" : 1280,
-	"WINDOW_START_HEIGHT" : 960,
+	"WINDOW_START_WIDTH" : 1920,
+	"WINDOW_START_HEIGHT" : 1080,
 	"WINDOW_START_X" : 0, //Starts from the top left corner of the rendering surface, not the whole window
 	"WINDOW_START_Y" : 40, //Starts from the top left corner of the rendering surface, not the whole window
 	"WINDOW_START_FULLSCREEN" : false,
